Updating html and css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href=" https://www.google.com/s2/favicons?domain=css-tricks.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <title> 🎧 Headphones 🎧 </title>
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/simple-lightbox.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <h1>Hello World!</h1>
+<body id="home">
+    <nav class="navbar">
+        <div class="container">
+            <h1 class="logo">Phono</h1>
+            <ul class="nav">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </div>
+    </nav>
+    
+
     <!-- Script -->
+    <script src="js/simple-lightbox.min.js"></script>
+    <script src="https://kit.fontawesome.com/3da1a747b2.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
